--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	</div><!-- /content -->
 
 	<div data-role="footer">
-		<h4>Page Footer</h4>
+		<h4>Page Footer....</h4>
 	</div><!-- /footer -->
 </div><!-- /page -->
 
